tests/ui/typeck/unused-type-parameter-span-30236.stderr
error[E0091]: type parameter `Unused` is never used
  --> $DIR/unused-type-parameter-span-30236.rs:3:5
   |
LL |     Unused
   |     ^^^^^^ unused type parameter
   |
   = help: consider removing `Unused` or referring to it in the body of the type alias
   = help: if you intended `Unused` to be a const parameter, use `const Unused: /* Type */` instead

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0091`.
